# KQCircuits

./: .buildinfo  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  README.rst  about.html  check_copyright_headers.py  check_files_for_strings.sh  citing.html  conftest.py  contributing.html  coupler_lib.py  defaults.py  genindex.html  grain.xml  groundgrid.py  index.html  installation.html  kqcircuit.lym  kqcircuit.py  license_manifest.txt  macro_prepare.py  objects.inv  py-modindex.html  pytest.ini  requirements.txt  requirements_within_klayout_unix.txt  requirements_within_klayout_windows.txt  salt.html  search.html  searchindex.js  setup.py  setup_helper.py  setup_within_klayout.py  (+5 more)
klayout_package/python/: MANIFEST.in  README.md  dev-requirements.in  doc-requirements.in  doc-requirements.txt  graph-requirements.in  graph-requirements.txt  gui-requirements.in  mac-notebook-requirements.txt  notebook-requirements.txt  pip-requirements.in  pyproject.toml  requirements.in  requirements.txt  setup.py  sim-requirements.in  sim-requirements.txt  test-requirements.in  test-requirements.txt  win-doc-requirements.txt  win-graph-requirements.txt  win-gui-requirements.in  win-notebook-requirements.txt  win-requirements.txt  win-sim-requirements.txt  win-test-requirements.txt
klayout_package/python/console_scripts/: run.py
klayout_package/python/drc/: area_and_density.lydrc  example.lydrc  waveguides.lydrc
klayout_package/python/kqcircuits/: __init__.py  _static_version.py  _version.py  (+8 more)
(+2258 files in other folders)
